crates/rv-gem-specification-yaml/tests/snapshots/yaml_compatibility__complex_spec_parsed.snap
---
source: crates/rv-gem-specification-yaml/tests/yaml_compatibility.rs
expression: spec
---
Specification {
    name: "complex-gem",
    version: Version {
        version: "2.1.3",
        segments: [
            Number(
                2,
            ),
            Number(
                1,
            ),
            Number(
                3,
            ),
        ],
    },
    summary: "A complex gem with dependencies",
    require_paths: [
        "lib",
    ],
    rubygems_version: "3.4.20",
    specification_version: 4,
    date: "",
    authors: [
        Some(
            "Author One",
        ),
        Some(
            "Author Two",
        ),
    ],
    email: [
        Some(
            "author1@example.com",
        ),
        Some(
            "author2@example.com",
        ),
    ],
    homepage: Some(
        "https://github.com/example/complex-gem",
    ),
    description: Some(
        "This gem has multiple dependencies and complex metadata",
    ),
    licenses: [
        "Apache-2.0",
    ],
    files: [
        "lib/complex_gem.rb",
        "lib/complex_gem/version.rb",
        "README.md",
    ],
    executables: [
        "complex-gem",
    ],
    extensions: [],
    dependencies: [
        Dependency {
            name: "json",
            requirement: [
                ~> 2.0,
            ],
            dep_type: Runtime,
        },
        Dependency {
            name: "nokogiri",
            requirement: [
                >= 1.10.0,
                < 2.0,
            ],
            dep_type: Runtime,
        },
        Dependency {
            name: "rspec",
            requirement: [
                ~> 3.0,
            ],
            dep_type: Development,
        },
        Dependency {
            name: "rake",
            requirement: [
                >= 12.0,
            ],
            dep_type: Development,
        },
    ],
    metadata: {
        "bug_tracker_uri": "https://github.com/example/complex-gem/issues",
        "changelog_uri": "https://github.com/example/complex-gem/blob/main/CHANGELOG.md",
        "documentation_uri": "https://rubydoc.info/gems/complex-gem",
        "source_code_uri": "https://github.com/example/complex-gem",
    },
    platform: Ruby,
    bindir: "bin",
    post_install_message: None,
    requirements: [],
    required_ruby_version: [
        >= 3.0.0,
    ],
    required_rubygems_version: [
        >= 3.0.0,
    ],
    test_files: [],
    extra_rdoc_files: [],
    rdoc_options: [],
    cert_chain: [],
    signing_key: None,
    autorequire: None,
    installed_by_version: None,
}
