crates/rv-gem-specification-yaml/tests/snapshots/yaml_compatibility__edge_case_spec_parsed.snap
---
source: crates/rv-gem-specification-yaml/tests/yaml_compatibility.rs
expression: spec
---
Specification {
    name: "edge-case-gem",
    version: Version {
        version: "0.1.0.pre",
        segments: [
            Number(
                0,
            ),
            Number(
                1,
            ),
            Number(
                0,
            ),
            String(
                "pre",
            ),
        ],
    },
    summary: "Testing edge cases",
    require_paths: [
        "lib",
    ],
    rubygems_version: "3.4.20",
    specification_version: 4,
    date: "",
    authors: [
        Some(
            "Edge Developer",
        ),
    ],
    email: [],
    homepage: None,
    description: None,
    licenses: [],
    files: [],
    executables: [],
    extensions: [],
    dependencies: [
        Dependency {
            name: "nokogiri",
            requirement: [
                ~> 1.13.0,
            ],
            dep_type: Runtime,
        },
        Dependency {
            name: "zeitwerk",
            requirement: [
                ~> 2.5,
            ],
            dep_type: Runtime,
        },
        Dependency {
            name: "dry-types",
            requirement: [
                >= 1.5,
                < 2.0,
            ],
            dep_type: Runtime,
        },
        Dependency {
            name: "activesupport",
            requirement: [
                ~> 7.0.0,
                >= 7.0.4,
            ],
            dep_type: Runtime,
        },
        Dependency {
            name: "minitest",
            requirement: [
                ~> 5.0,
            ],
            dep_type: Development,
        },
        Dependency {
            name: "rubocop",
            requirement: [
                ~> 1.50,
                >= 1.50.2,
            ],
            dep_type: Development,
        },
    ],
    metadata: {},
    platform: Ruby,
    bindir: "bin",
    post_install_message: None,
    requirements: [],
    required_ruby_version: [
        ~> 3.0,
    ],
    required_rubygems_version: [
        ~> 3.3,
    ],
    test_files: [],
    extra_rdoc_files: [],
    rdoc_options: [],
    cert_chain: [],
    signing_key: None,
    autorequire: None,
    installed_by_version: None,
}
