crates/rv-gem-specification-yaml/tests/snapshots/yaml_compatibility__prerelease_spec_parsed.snap
---
source: crates/rv-gem-specification-yaml/tests/yaml_compatibility.rs
expression: spec
---
Specification {
    name: "prerelease-gem",
    version: Version {
        version: "2.0.0.alpha1",
        segments: [
            Number(
                2,
            ),
            Number(
                0,
            ),
            Number(
                0,
            ),
            String(
                "alpha",
            ),
            Number(
                1,
            ),
        ],
    },
    summary: "A prerelease gem",
    require_paths: [
        "lib",
    ],
    rubygems_version: "3.4.20",
    specification_version: 4,
    date: "",
    authors: [
        Some(
            "Alpha Developer",
        ),
    ],
    email: [],
    homepage: None,
    description: None,
    licenses: [],
    files: [
        "lib/prerelease.rb",
    ],
    executables: [],
    extensions: [],
    dependencies: [
        Dependency {
            name: "rspec",
            requirement: [
                ~> 3.10,
            ],
            dep_type: Development,
        },
        Dependency {
            name: "activesupport",
            requirement: [
                >= 5.0,
                < 8.0,
            ],
            dep_type: Runtime,
        },
    ],
    metadata: {},
    platform: Ruby,
    bindir: "bin",
    post_install_message: None,
    requirements: [],
    required_ruby_version: [
        >= 0,
    ],
    required_rubygems_version: [
        > 1.3.1,
    ],
    test_files: [],
    extra_rdoc_files: [],
    rdoc_options: [],
    cert_chain: [],
    signing_key: None,
    autorequire: None,
    installed_by_version: None,
}
